--- a/package.json
+++ b/package.json
@@ -9,12 +9,60 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@editorjs/checklist": "^1.3.0",
+    "@editorjs/code": "^2.7.0",
+    "@editorjs/delimiter": "^1.2.0",
+    "@editorjs/editorjs": "^2.25.0",
+    "@editorjs/embed": "^2.5.2",
+    "@editorjs/header": "^2.6.2",
+    "@editorjs/image": "^2.6.2",
+    "@editorjs/inline-code": "^1.3.1",
+    "@editorjs/link": "^2.4.1",
+    "@editorjs/list": "^1.7.0",
+    "@editorjs/marker": "^1.2.2",
+    "@editorjs/quote": "^2.4.0",
+    "@editorjs/raw": "^2.3.1",
+    "@editorjs/simple-image": "^1.4.1",
+    "@editorjs/table": "^2.0.2",
+    "@editorjs/warning": "^1.2.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mantine/core": "^4.2.12",
+    "@mantine/hooks": "^4.2.12",
+    "@mantine/rte": "^4.2.12",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.6",
+    "@next-auth/mongodb-adapter": "^1.0.3",
+    "@next-auth/prisma-adapter": "^1.0.3",
+    "@next-tools/dynamic": "^0.0.11",
+    "@prisma/client": "^4.0.0",
+    "@tailwindcss/forms": "^0.5.2",
+    "axios": "^0.27.2",
+    "babel-polyfill": "^6.26.0",
+    "dompurify": "^2.3.9",
+    "draft-js": "^0.11.7",
+    "framer-motion": "^6.3.16",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.7.0",
+    "mongoose": "^6.4.4",
     "next": "12.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next-auth": "^4.9.0",
+    "next-auth-client": "^1.5.0",
+    "next-themes": "^0.2.0",
+    "nodemailer": "^6.7.7",
+    "quill": "^1.3.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-editor-js": "^2.1.0",
+    "react-html-parser": "^2.0.2",
+    "react-quilljs": "^1.3.0",
+    "recoil": "^0.7.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.7",
     "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.4"
   }
 }
